--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
         target:
           - x86_64-unknown-linux-gnu
           #- x86_64-unknown-linux-gnux32
-          - x86_64-unknown-linux-musl
+          #- x86_64-unknown-linux-musl
     name: Linux-${{ matrix.target }}
     steps:
       - name: 检出代码
