--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 regex = "1.11.1"
-reqwest = { version = "0.12", features = ["blocking", "json"] }
+reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
 tokio = { version = "1", features = ["full"] } # 如需异步下载
 indicatif = "0.17"
 sha2 = "0.10"
