--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,7 @@ jobs:
           - x86_64-unknown-linux-gnu
           #- x86_64-unknown-linux-gnux32
           #- x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-gnu
     name: Linux-${{ matrix.target }}
     steps:
       - name: 检出代码
