--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,6 +50,10 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
 
+      - name: 安装编译器(arm64)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: 安装 Rust
         uses: actions-rs/toolchain@v1
         with:
