--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,15 +44,40 @@ jobs:
           - x86_64-unknown-linux-gnu
           #- x86_64-unknown-linux-gnux32
           #- x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-gnu
     name: Linux-${{ matrix.target }}
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
 
-      - name: 安装编译器(arm64)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+      - name: 安装 Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
+
+      - name: 构建项目
+        run: cargo build --release --target=${{ matrix.target }}
+
+      - name: 上传编译产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: wget-rs-windows-${{ matrix.target }}
+          path: |
+            target/${{ matrix.target }}/release/wget-rs
+
+  build-linux-arm:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        target:
+          - aarch64-unknown-linux-gnu
+          #- x86_64-unknown-linux-gnux32
+          #- x86_64-unknown-linux-musl
+    name: Linux-${{ matrix.target }}
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
 
       - name: 安装 Rust
         uses: actions-rs/toolchain@v1
