--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         target:
           - x86_64-pc-windows-msvc
+          - x86_64-win7-windows-msvc
 
     name: Windows-${{ matrix.target }}
     steps:
