--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,14 @@ name: 编译
 
 on:
   workflow_dispatch:
+    inputs:
+      release:
+        description: 是否发布到 GitHub Releases
+        default: 'false'
+        type: boolean
+      tag:
+        description: 版本号（不输入则自动从 Cargo.toml 中获取）
+        type: string
 
 env:
   CARGO_TERM_COLOR: always
@@ -127,17 +135,25 @@ jobs:
 
   release:
     runs-on: ubuntu-22.04
+    if: ${{ inputs.release == 'true' }}
     needs: [build-windows, build-linux, build-linux-arm]
     steps:
       - name: 下载编译产物
         uses: actions/download-artifact@v4
+        with:
+          path: *.zip
 
+      - name: 获取版本号
+        if: ${{ inputs.tag == '' }}
+        id: get_version
+        run: |
+          wget https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.repository }}/${{ github.ref }}/Cargo.toml
+          tag_name=$(grep '^version' Cargo.toml | head -n1 | awk -F\" '{print $2}')
+          echo "::set-output name=tag_name::$tag_name"
 
-      - name: 发布到 GitHub Releases
+      - name: 发行
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v1.0.0
+          tag_name: ${{ steps.get_version.outputs.tag_name }}
           files: |
-            target/x86_64-pc-windows-msvc/release/wget-rs.exe
-            target/x86_64-unknown-linux-gnu/release/wget-rs
-            target/aarch64-unknown-linux-gnu/release/wget-rs
+            *.zip
